welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:4: error: not found: value test
		test = true;
                ^sleepIn:6: error: not found: value test
		test = false;	
                ^